@@ -30,6 +30,7 @@ Version 1.0.2
 * Fix incorrect behaviour when falling on statics from the top after monkeyswing.
 * Fix missing animcommand calls on first animation frame.
 * Fix 1-frame turn rate delays.
+* Fix young Lara second ponytail rendering.
 * Fix occasional leave event calls when moving closer to volumes.
 * Fix incorrect viewport size in windowed mode.
 * Fix late landing animation dispatch in rare cases.
